# LabElasticSearch-Grupo03

./: .env  .gitignore  README.md  code.ipynb  criativa.ipynb  lab.ipynb  pyproject.toml
.ipynb_checkpoints/: criativa-checkpoint.ipynb  lab-checkpoint.ipynb
