[project]
name = "labelasticsearch"
version = "0.1.0"
description = "Lab Recinfo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch==8.17.2",
    "ipykernel==6.29.*",
    "jupyter>=1.1.1",
    "nltk==3.9.*",
    "openpyxl==3.1.*",
    "pandas==2.2.*",
    "pip>=26.0.1",
    "scikit-learn==1.6.*",
    "sentence-transformers==3.4.*",
    "spacy==3.8.*",
    "unidecode==1.3.*",
    "xlsxwriter==3.2.*",
]
